syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.vincenzo.shopping.grpc.member";
option java_outer_classname = "MemberProto";

package member;

service MemberService {
  rpc GetMember (GetMemberRequest) returns (MemberResponse);
  rpc UpdateMemberPoint (UpdateMemberPointRequest) returns (MemberResponse);
}

message GetMemberRequest {
  int64 member_id = 1;
}

message UpdateMemberPointRequest {
  int64 member_id = 1;
  int32 point_change = 2;
}

message MemberResponse {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string phone_number = 4;
  int32 point = 5;
}
